# breakout

./: .gitignore  CMakeLists.txt  README.md  breakout.c  first.frag  first.vert  triangle.frag  triangle.vert
include/: bo_index_buffer.h  bo_shader.h  bo_vertex_array.h  bo_vertex_buffer.h  bo_window.h  index_buffer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  window.h
include/glad/: glad.h
src/: bo_index_buffer.c  bo_shader.c  bo_vertex_array.c  bo_vertex_buffer.c  bo_window.c  glad.c  index_buffer.c  shader.c  texture.c  vertex_array.c  vertex_buffer.c  window.c
